--- a/index.html
+++ b/index.html
@@ -8,9 +8,50 @@
         <link rel="icon" href="icon/icon.png" type="image/png">
         <link rel="apple-touch-icon" href="icon/icon.png">
         <link rel="stylesheet" type="text/css" href="css/game.css">
+		<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
         <title>Project1</title>
     </head>
+	<!-- Use it like any other HTML element -->
+	<model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls></model-viewer>
     <body style="background-color: black">
         <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
+<script type="text/javascript">
+	window.onload = function (){
+		console.log('$dataMap', $dataActors)
+		fireKeyEvent("canvas", 'keydown', 13);
+	}
+	//模拟按键按下
+	function fireKeyEvent(el, evtType, keyCode){
+		var doc = el.ownerDocument,
+			win = doc.defaultView || doc.parentWindow,
+			evtObj;
+		if(doc.createEvent){
+			if(win.KeyEvent) {
+				evtObj = doc.createEvent('KeyEvents');
+				evtObj.initKeyEvent( evtType, true, true, win, false, false, false, false, keyCode, 0 );
+			}
+			else {
+				evtObj = doc.createEvent('UIEvents');
+				Object.defineProperty(evtObj, 'keyCode', {
+			        get : function() { return this.keyCodeVal; }
+			    });     
+			    Object.defineProperty(evtObj, 'which', {
+			        get : function() { return this.keyCodeVal; }
+			    });
+				evtObj.initUIEvent( evtType, true, true, win, 1 );
+				evtObj.keyCodeVal = keyCode;
+				if (evtObj.keyCode !== keyCode) {
+			        console.log("keyCode " + evtObj.keyCode + " 和 (" + evtObj.which + ") 不匹配");
+			    }
+			}
+			el.dispatchEvent(evtObj);
+		} 
+		else if(doc.createEventObject){
+			evtObj = doc.createEventObject();
+			evtObj.keyCode = keyCode;
+			el.fireEvent('on' + evtType, evtObj);
+		}
+	}
+</script>
